Updated question list

--- a/facts/ionic.config.json
+++ b/facts/ionic.config.json
@@ -9,6 +9,10 @@
     {
       "path": "/rbeesoftdata/",
       "proxyUrl": "https://s3-eu-west-1.amazonaws.com/rbeesoftdata/"
+    },
+    {
+      "path": "/data/",
+      "proxyUrl": "https://github.com/rbrecheisen/facts/blob/master/facts/src/assets/data/"
     }
   ]
 }
